--- a/index.html
+++ b/index.html
@@ -90,3 +90,6 @@ To work as a Software Developer building scalable and reliable applications.
 
 </body>
 </html>
+
+<!-- GitHub Pages refresh -->
+
